--- a/assets/style.css
+++ b/assets/style.css
@@ -8,3 +8,14 @@
     margin: 0;
     box-sizing: inherit;
 }
+
+h1 {
+    text-decoration: dotted;
+    text-align: center;
+    font-family: "Sixtyfour Convergence", sans-serif;
+    margin-bottom: 5px;
+}
+
+header {
+    margin-top: 20px;
+}
